--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@xterm/xterm": "^5.5.0",
+    "motion": "^12.23.26",
     "next": "^15.5.7",
     "react": "19.1.0",
     "react-dom": "19.1.0",
